@@ -1,8 +1,5 @@
 package com.hfstudio.guidenh.guide.compiler.tags;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import com.hfstudio.guidenh.guide.compiler.PageCompiler;
@@ -12,8 +9,7 @@ import com.hfstudio.guidenh.libs.mdast.mdx.model.MdxJsxElementFields;
 
 public class HeadingCompiler extends BlockTagCompiler {
 
-    private static final Set<String> TAG_NAMES = Collections
-        .unmodifiableSet(new HashSet<>(Arrays.asList("h1", "h2", "h3", "h4", "h5", "h6")));
+    private static final Set<String> TAG_NAMES = Set.of("h1", "h2", "h3", "h4", "h5", "h6");
 
     @Override
     public Set<String> getTagNames() {
