@@ -144,6 +144,8 @@ public class GuideSiteExportTask {
             for (Map.Entry<String, List<GuideSitePageVariant>> entry : allVariantsByLanguage.entrySet()) {
                 String language = entry.getKey();
                 List<GuideSitePageVariant> languageVariants = entry.getValue();
+                switchMinecraftLanguage(language);
+                writer.writeExternalLinkPage(outDir, language);
                 contextsByLanguage.put(
                     language,
                     buildLanguageExportContext(guidesById, languageVariants, resourceManager, language, assets));
@@ -311,7 +313,8 @@ public class GuideSiteExportTask {
             writer.writeSearchIndex(outDir, entry.getKey(), GSON.toJson(entry.getValue()));
         }
 
-        writer.writeLandingPage(outDir, firstPageUrl, "GuideNH Static Export");
+        GuideSiteLocalizedText landingPageText = GuideSiteLocalizedText.resolve();
+        writer.writeLandingPage(outDir, firstPageUrl, "GuideNH Static Export", landingPageText);
 
         return new Result(guidesExported, pagesExported, pagesFailed, outDir);
     }
@@ -401,10 +404,9 @@ public class GuideSiteExportTask {
                 pw.println();
             }
             Files.createDirectories(outDir);
-            Files.write(
+            Files.writeString(
                 outDir.resolve("export-failures.log"),
-                sw.toString()
-                    .getBytes(StandardCharsets.UTF_8),
+                sw.toString(),
                 StandardOpenOption.CREATE,
                 StandardOpenOption.APPEND);
         } catch (IOException ioException) {
@@ -968,7 +970,7 @@ public class GuideSiteExportTask {
     }
 
     private void appendCssPx(StringBuilder style, String property, int value) {
-        if (style.length() > 0) {
+        if (!style.isEmpty()) {
             style.append(';');
         }
         style.append(property)
@@ -1116,7 +1118,7 @@ public class GuideSiteExportTask {
             LinkedHashMap<String, Object> visibleLayerControl = new LinkedHashMap<>();
             visibleLayerControl.put("label", GuidebookText.SceneVisibleLayerLabel.text());
             visibleLayerControl.put("allLabel", GuidebookText.SceneAll.text());
-            visibleLayerControl.put("max", visibleLayers.get(visibleLayers.size() - 1));
+            visibleLayerControl.put("max", visibleLayers.getLast());
             controls.put("visibleLayer", visibleLayerControl);
         }
         if (scene.hasPonderData() && !ponderTicks.isEmpty()) {
@@ -1348,7 +1350,7 @@ public class GuideSiteExportTask {
         for (Integer value : channelValues.get(channelIndex)) {
             currentChannels.add(value);
             appendStructureVariantStates(states, tiers, channelIds, channelValues, channelIndex + 1, currentChannels);
-            currentChannels.remove(currentChannels.size() - 1);
+            currentChannels.removeLast();
         }
     }
 
@@ -1576,8 +1578,8 @@ public class GuideSiteExportTask {
             if (tiers.size() > 1) {
                 LinkedHashMap<String, Object> tierControl = new LinkedHashMap<>();
                 tierControl.put("label", GuidebookText.SceneStructureLibTierLabel.text());
-                tierControl.put("min", tiers.get(0));
-                tierControl.put("max", tiers.get(tiers.size() - 1));
+                tierControl.put("min", tiers.getFirst());
+                tierControl.put("max", tiers.getLast());
                 control.put("tier", tierControl);
             }
             if (!selectableChannels.isEmpty()) {
